# symbolica-community

./: Cargo.toml  Readme.md  Readme_pypi.md  pyproject.toml
.github/workflows/: publish_pypi.yml
example/: Cargo.toml
example/src/: lib.rs
example_extension/: Cargo.toml
python/symbolica/community/idenso/: __init__.py
python/symbolica/community/spenso/: __init__.py  __init__.pyi
python/symbolica/community/vakint/: __init__.py
src/: lib.rs
