[package]
authors = ["Ben Ruijl <benruyl@gmail.com>"]
categories = ["science"]
description = "A blazing fast computer algebra system, with community extensions"
edition = "2021"
keywords = ["algebra", "symbolic", "manipulation", "mathematics", "physics"]
license = "MIT"
name = "symbolica"
readme = "Readme.md"
repository = "https://github.com/benruijl/symbolica-community"
rust-version = "1.73"
version = "0.18.0"

[[bin]]
name = "stub_gen"
required-features = ["python_stubgen"]

[lib]
name = "symbolica_community"
crate-type = ["rlib", "cdylib"]

[features]
python_stubgen = ["symbolica/python_stubgen", "example/python_stubgen"]

[dependencies]
symbolica = { version = "0.18", features = ["python_export"] }
pyo3 = "0.25"
pyo3-stub-gen = { version = "0.13", default-features = false }
example = { path = "example" }

[patch.crates-io]
symbolica = { git = "https://github.com/benruijl/symbolica", branch = "modules" }
pyo3-stub-gen = { git = "https://github.com/benruijl/pyo3-stub-gen", branch = "patched" }
