[package]
authors = ["Ben Ruijl <benruyl@gmail.com>"]
categories = ["science"]
description = "A blazing fast computer algebra system, with community extensions"
edition = "2021"
keywords = ["algebra", "symbolic", "manipulation", "mathematics", "physics"]
license = "MIT"
name = "symbolica_community"
readme = "Readme.md"
repository = "https://github.com/benruijl/symbolica-community"
rust-version = "1.88"
version = "1.0.0"


[[bin]]
name = "stub_gen"
required-features = ["python_stubgen"]

[lib]
name = "symbolica_community"
crate-type = ["rlib", "cdylib"]

[features]
python_stubgen = [
    "pyo3-stub-gen",
    "symbolica/python_stubgen",
    "spynso3/python_stubgen",
    "idenso/python_stubgen",
    "vakint/python_stubgen",
    "example_extension/python_stubgen",
]

[dependencies]
example_extension = { path = "example_extension" }
idenso = { version = "0.2.3", features = ["bincode", "python"] }
symbolica = { version = "1.0", features = ["python_export"] }
pyo3 = "0.27"
pyo3-stub-gen = { version = "0.16", optional = true, default-features = false, features = [
    "numpy",
] }
spynso3 = { version = "0.1" }
vakint = { git = "https://github.com/alphal00p/vakint", rev = "a32723f7c56ce73dd6a35713880e3a924e72c51b", features = [
    "symbolica_community_module",
] }

[patch.crates-io]
spynso3 = { git = "https://github.com/alphal00p/spenso", rev = "46d03a08aac6f249919d43cd2717220289baf8df" }
idenso = { git = "https://github.com/alphal00p/spenso", rev = "46d03a08aac6f249919d43cd2717220289baf8df" }
spenso = { git = "https://github.com/alphal00p/spenso", rev = "46d03a08aac6f249919d43cd2717220289baf8df" }
spenso-hep-lib = { git = "https://github.com/alphal00p/spenso", rev = "46d03a08aac6f249919d43cd2717220289baf8df" }
#pyo3-stub-gen = { git = "https://github.com/Jij-Inc/pyo3-stub-gen", rev = "b13f213a748ee09bf22073e0e4d82cb09d797a5c", optional = true, default-features = false, features = [
#    "numpy",
#] }


[build-dependencies]
pyo3-build-config = "*"
